Fix fraction spacing again

--- a/web-interface/style.css
+++ b/web-interface/style.css
@@ -6,7 +6,7 @@
 .math {
     display: flex;
     width: 100%;
-    height: 120px;
+    height: 200px;
     background-color: var(--math-background);
     justify-content: center;
     align-content: center;
